tests/traefik/02-ingress-path.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: web
    namespace: test
    labels:
        name: web
        environment: production
        method: traefik
spec:
    rules:
        - host: web.example.domain.com
          http:
              paths:
                  - pathType: Prefix
                    path: /web1
                    backend:
                        service:
                            name: test-service1
                            port:
                                name: http
                  - pathType: Prefix
                    path: /web2
                    backend:
                        service:
                            name: test-service2
                            port:
                                name: http
